// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots dividers edge 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className="css-1pg0ko5"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="menu"
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <div
      className="css-rficis"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`Storyshots dividers sandwich 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className="css-1pg0ko5"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="menu"
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <div
      className="css-rficis"
      tabIndex="-1"
    />
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots menu items long text 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className="css-1pg0ko5"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="menu"
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots menu items long text with icon 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className="css-1pg0ko5"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="menu"
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots menu items multiple 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className="css-1pg0ko5"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="menu"
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots menu items one 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className="css-1pg0ko5"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="menu"
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots menu items with icons 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className="css-1pg0ko5"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="menu"
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots nested origin bottomLeft 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 20,
        "left": 20,
        "position": "absolute",
      }
    }
  >
    <div
      className="css-1992o3v"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="menu"
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin bottomRight 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 20,
        "position": "absolute",
        "right": 20,
      }
    }
  >
    <div
      className="css-e49ryl"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="menu"
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin topLeft 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "left": 20,
        "position": "absolute",
        "top": 20,
      }
    }
  >
    <div
      className="css-1pg0ko5"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="menu"
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin topRight 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "position": "absolute",
        "right": 20,
        "top": 20,
      }
    }
  >
    <div
      className="css-kv78c9"
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="menu"
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
